--- a/envguard/website/package.json
+++ b/envguard/website/package.json
@@ -11,10 +11,18 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-tabs": "^1.1.11",
     "@tailwindcss/vite": "^4.1.6",
+    "classnames": "^2.5.1",
+    "framer-motion": "^12.10.5",
+    "lucide-react": "^0.509.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0",
+    "react-syntax-highlighter": "^15.6.1",
+    "react-type-animation": "^3.2.0",
     "tailwindcss": "^4.1.6"
   },
   "devDependencies": {
