--- a/envguard/website/package.json
+++ b/envguard/website/package.json
@@ -15,7 +15,9 @@
     "@radix-ui/react-slot": "^1.2.2",
     "@radix-ui/react-tabs": "^1.1.11",
     "@tailwindcss/vite": "^4.1.6",
+    "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.10.5",
     "lucide-react": "^0.509.0",
     "react": "^19.1.0",
@@ -23,6 +25,7 @@
     "react-router-dom": "^7.6.0",
     "react-syntax-highlighter": "^15.6.1",
     "react-type-animation": "^3.2.0",
+    "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.6"
   },
   "devDependencies": {
@@ -34,6 +37,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "tw-animate-css": "^1.2.9",
     "vite": "^6.3.5"
   }
 }
